--- a/naunet/templates/cvode/src/naunet.cpp.j2
+++ b/naunet/templates/cvode/src/naunet.cpp.j2
@@ -31,55 +31,138 @@
 #include "naunet_utilities.h"
 /* {% endif -%} */
 
-// check_flag function is from the cvDiurnals_ky.c example from the CVODE
-// package. Check function return value...
+Naunet::Naunet(){};
+
+Naunet::~Naunet(){};
+
+// Adaptedfrom the cvDiurnals_ky.c example from the CVODE package. 
+// Check function return value...
 //   opt == 0 means SUNDIALS function allocates memory so check if
 //            returned NULL pointer
 //   opt == 1 means SUNDIALS function returns a flag so check if
 //            flag >= 0
 //   opt == 2 means function allocates memory so check if returned
 //            NULL pointer
-static int check_flag(void *flagvalue, const char *funcname, int opt) {
+int Naunet::CheckFlag(void *flagvalue, const char *funcname, int opt, FILE *errf) {
     int *errflag;
 
     /* Check if SUNDIALS function returned NULL pointer - no memory allocated */
     if (opt == 0 && flagvalue == NULL) {
-        fprintf(stderr,
+        fprintf(errf,
                 "\nSUNDIALS_ERROR: %s() failed - returned NULL pointer\n\n",
                 funcname);
-        return 1;
+        return NAUNET_FAIL;
     }
 
     /* Check if flag < 0 */
     else if (opt == 1) {
         errflag = (int *)flagvalue;
         if (*errflag < 0) {
-            fprintf(stderr, "\nSUNDIALS_ERROR: %s() failed with flag = %d\n\n",
+            fprintf(errf, "\nSUNDIALS_ERROR: %s() failed with flag = %d\n\n",
                     funcname, *errflag);
-            return 1;
+            return NAUNET_FAIL;
         }
     }
 
     /* Check if function returned NULL pointer - no memory allocated */
     else if (opt == 2 && flagvalue == NULL) {
-        fprintf(stderr,
+        fprintf(errf,
                 "\nMEMORY_ERROR: %s() failed - returned NULL pointer\n\n",
                 funcname);
-        return 1;
+        return NAUNET_FAIL;
     }
 
-    return 0;
-}
+    return NAUNET_SUCCESS;
+};
 
-Naunet::Naunet(){};
+int Naunet::Finalize() {
 
-Naunet::~Naunet(){};
+    /* {% if info.method == "dense" or info.method == "sparse" -%} */
+
+    // N_VDestroy(cv_y_);
+    N_VFreeEmpty(cv_y_);
+    SUNMatDestroy(cv_a_);
+    CVodeFree(&cv_mem_);
+    SUNLinSolFree(cv_ls_);
+    // delete m_data;
+
+    /* {% elif info.method == "cusparse" -%} */
+    for (int i = 0; i < n_stream_in_use_; i++) {
+        N_VFreeEmpty(cv_y_[i]);
+        SUNMatDestroy(cv_a_[i]);
+        CVodeFree(&cv_mem_[i]);
+        SUNLinSolFree(cv_ls_[i]);
+
+        cusparseDestroy(cusp_handle_[i]);
+        cusolverSpDestroy(cusol_handle_[i]);
+        cudaStreamDestroy(custream_[i]);
+    }
+
+    cudaFreeHost(h_ab);
+    cudaFreeHost(h_data);
+
+    /* {% endif %} */
+
+    return NAUNET_SUCCESS;
+};
+
+int Naunet::GetCVStates(void *cv_mem, 
+                        long int &nst, long int &nfe, long int &nsetups, long int &nje, 
+                        long int &netf, long int &nge, long int &nni, long int &ncfn) {
+
+    int flag;
+
+    flag = CVodeGetNumSteps(cv_mem, &nst);
+    if (CheckFlag(&flag, "CVodeGetNumSteps", 1, errfp_) == NAUNET_FAIL) {
+        return NAUNET_FAIL;
+    }
+
+    flag = CVodeGetNumRhsEvals(cv_mem, &nfe);
+    if (CheckFlag(&flag, "CVodeGetNumRhsEvals", 1, errfp_) == NAUNET_FAIL) {
+        return NAUNET_FAIL;
+    }
+
+    flag = CVodeGetNumLinSolvSetups(cv_mem, &nsetups);
+    if (CheckFlag(&flag, "CVodeGetNumLinSolvSetups", 1, errfp_) == NAUNET_FAIL) {
+        return NAUNET_FAIL;
+    }
+
+    flag = CVodeGetNumErrTestFails(cv_mem, &netf);
+    if (CheckFlag(&flag, "CVodeGetNumErrTestFails", 1, errfp_) == NAUNET_FAIL) {
+        return NAUNET_FAIL;
+    }
+
+    flag = CVodeGetNumNonlinSolvIters(cv_mem, &nni);
+    if (CheckFlag(&flag, "CVodeGetNumNonlinSolvIters", 1, errfp_) == NAUNET_FAIL) {
+        return NAUNET_FAIL;
+    }
+
+    flag = CVodeGetNumNonlinSolvConvFails(cv_mem, &ncfn);
+    if (CheckFlag(&flag, "CVodeGetNumNonlinSolvConvFails", 1, errfp_) == NAUNET_FAIL) {
+        return NAUNET_FAIL;
+    }
+
+    flag = CVodeGetNumJacEvals(cv_mem, &nje);
+    if (CheckFlag(&flag, "CVodeGetNumJacEvals", 1, errfp_) == NAUNET_FAIL) {
+        return NAUNET_FAIL;
+    }
+
+    flag = CVodeGetNumGEvals(cv_mem, &nge);
+    if (CheckFlag(&flag, "CVodeGetNumGEvals", 1, errfp_) == NAUNET_FAIL) {
+        return NAUNET_FAIL;
+    }
+
+    return NAUNET_SUCCESS;
+
+};
+
 
 int Naunet::Init(int nsystem, double atol, double rtol, int mxsteps) {
     n_system_ = nsystem;
     mxsteps_  = mxsteps;
     atol_     = atol;
     rtol_     = rtol;
+    errfp_    = fopen("naunet_error_record.txt", "a");
 
     /* {% if info.method == "dense" -%} */
     if (nsystem != 1) {
@@ -95,16 +178,35 @@ int Naunet::Init(int nsystem, double atol, double rtol, int mxsteps) {
 
     int flag;
 
-    flag = CVodeInit(cv_mem_, Fex, 0.0, cv_y_);
-    if (check_flag(&flag, "CVodeInit", 1)) return 1;
+    flag = CVodeSetErrFile(cv_mem_, errfp_);
+    if (CheckFlag(&flag, "CVodeSetErrFile", 1, errfp_) == NAUNET_FAIL) {
+        return NAUNET_FAIL;
+    }
+
     flag = CVodeSetMaxNumSteps(cv_mem_, mxsteps_);
-    if (check_flag(&flag, "CVodeSetMaxNumSteps", 0)) return 1;
+    if (CheckFlag(&flag, "CVodeSetMaxNumSteps", 1, errfp_) == NAUNET_FAIL) {
+        return NAUNET_FAIL;
+    }
+
+    flag = CVodeInit(cv_mem_, Fex, 0.0, cv_y_);
+    if (CheckFlag(&flag, "CVodeInit", 1, errfp_) == NAUNET_FAIL) {
+        return NAUNET_FAIL;
+    }
+
     flag = CVodeSStolerances(cv_mem_, rtol_, atol_);
-    if (check_flag(&flag, "CVodeSStolerances", 1)) return 1;
+    if (CheckFlag(&flag, "CVodeSStolerances", 1, errfp_) == NAUNET_FAIL) {
+        return NAUNET_FAIL;
+    }
+
     flag = CVodeSetLinearSolver(cv_mem_, cv_ls_, cv_a_);
-    if (check_flag(&flag, "CVodeSetLinearSolver", 1)) return 1;
+    if (CheckFlag(&flag, "CVodeSetLinearSolver", 1, errfp_) == NAUNET_FAIL) {
+        return NAUNET_FAIL;
+    }
+
     flag = CVodeSetJacFn(cv_mem_, Jac);
-    if (check_flag(&flag, "CVodeSetJacFn", 1)) return 1;
+    if (CheckFlag(&flag, "CVodeSetJacFn", 1, errfp_) == NAUNET_FAIL) {
+        return NAUNET_FAIL;
+    }
 
     /* {% elif info.method == "sparse" -%} */
     if (nsystem != 1) {
@@ -121,15 +223,29 @@ int Naunet::Init(int nsystem, double atol, double rtol, int mxsteps) {
     int flag;
 
     flag = CVodeInit(cv_mem_, Fex, 0.0, cv_y_);
-    if (check_flag(&flag, "CVodeInit", 1)) return 1;
+    if (CheckFlag(&flag, "CVodeInit", 1, errfp_) == NAUNET_FAIL) {
+        return NAUNET_FAIL;
+    }
+
     flag = CVodeSetMaxNumSteps(cv_mem_, mxsteps_);
-    if (check_flag(&flag, "CVodeSetMaxNumSteps", 0)) return 1;
+    if (CheckFlag(&flag, "CVodeSetMaxNumSteps", 1, errfp_) == NAUNET_FAIL) {
+        return NAUNET_FAIL;
+    }
+
     flag = CVodeSStolerances(cv_mem_, rtol_, atol_);
-    if (check_flag(&flag, "CVodeSStolerances", 1)) return 1;
+    if (CheckFlag(&flag, "CVodeSStolerances", 1, errfp_) == NAUNET_FAIL) {
+        return NAUNET_FAIL;
+    }
+
     flag = CVodeSetLinearSolver(cv_mem_, cv_ls_, cv_a_);
-    if (check_flag(&flag, "CVodeSetLinearSolver", 1)) return 1;
+    if (CheckFlag(&flag, "CVodeSetLinearSolver", 1, errfp_) == NAUNET_FAIL) {
+        return NAUNET_FAIL;
+    }
+
     flag = CVodeSetJacFn(cv_mem_, Jac);
-    if (check_flag(&flag, "CVodeSetJacFn", 1)) return 1;
+    if (CheckFlag(&flag, "CVodeSetJacFn", 1, errfp_) == NAUNET_FAIL) {
+        return NAUNET_FAIL;
+    }
 
     /* {% elif info.method == "cusparse" -%} */
 
@@ -162,7 +278,9 @@ int Naunet::Init(int nsystem, double atol, double rtol, int mxsteps) {
         cusolverSpSetStream(cusol_handle_[i], custream_[i]);
         cv_y_[i]  = N_VNew_Cuda(NEQUATIONS * n_system_per_stream);
         flag = N_VSetKernelExecPolicy_Cuda(cv_y_[i], stream_exec_policy_[i], reduce_exec_policy_[i]);
-        if (check_flag(&flag, "N_VSetKernelExecPolicy_Cuda", 0)) return 1;
+        if (CheckFlag(&flag, "N_VSetKernelExecPolicy_Cuda", 1, errfp_) == NAUNET_FAIL) {
+            return NAUNET_FAIL;
+        }
         cv_a_[i]  = SUNMatrix_cuSparse_NewBlockCSR(n_system_per_stream, NEQUATIONS, NEQUATIONS,
                                                    NNZ, cusp_handle_[i]);
         cv_ls_[i] = SUNLinSol_cuSolverSp_batchQR(cv_y_[i], cv_a_[i], cusol_handle_[i]);
@@ -173,26 +291,46 @@ int Naunet::Init(int nsystem, double atol, double rtol, int mxsteps) {
         cv_mem_[i] = CVodeCreate(CV_BDF);
 
         flag = CVodeInit(cv_mem_[i], Fex, 0.0, cv_y_[i]);
-        if (check_flag(&flag, "CVodeInit", 1)) return 1;
+        if (CheckFlag(&flag, "CVodeInit", 1, errfp_) == NAUNET_FAIL) {
+            return NAUNET_FAIL;
+        }
+
         flag = CVodeSetMaxNumSteps(cv_mem_[i], mxsteps_);
-        if (check_flag(&flag, "CVodeSetMaxNumSteps", 0)) return 1;
+        if (CheckFlag(&flag, "CVodeSetMaxNumSteps", 1, errfp_) == NAUNET_FAIL) {
+            return NAUNET_FAIL;
+        }
+
         flag = CVodeSStolerances(cv_mem_[i], rtol_, atol_);
-        if (check_flag(&flag, "CVodeSStolerances", 1)) return 1;
+        if (CheckFlag(&flag, "CVodeSStolerances", 1, errfp_) == NAUNET_FAIL) {
+            return NAUNET_FAIL;
+        }
+
         flag = CVodeSetLinearSolver(cv_mem_[i], cv_ls_[i], cv_a_[i]);
-        if (check_flag(&flag, "CVodeSetLinearSolver", 1)) return 1;
+        if (CheckFlag(&flag, "CVodeSetLinearSolver", 1, errfp_) == NAUNET_FAIL) {
+            return NAUNET_FAIL;
+        }
+
         flag = CVodeSetJacFn(cv_mem_[i], Jac);
-        if (check_flag(&flag, "CVodeSetJacFn", 1)) return 1;
+        if (CheckFlag(&flag, "CVodeSetJacFn", 1, errfp_) == NAUNET_FAIL) {
+            return NAUNET_FAIL;
+        }
 
     }
 
     /* {% elif info.method == "spgmr" -%} */
     // TODO: Try GMRES solvers
     // cv_ls_ = SUNLinSol_SPGMR(cv_y_, 0, 0);
-    // if (check_flag((void *)cv_ls_, "SUNLinSol_SPGMR", 0)) return 1;
+    // if (CheckFlag((void *)cv_ls_, "SUNLinSol_SPGMR", 0, errfp_) == NAUNET_FAIL) {
+    //     return NAUNET_FAIL;
+    // }
     // flag = CVSpilsSetLinearSolver(cv_mem_, cv_ls_);
-    // if (check_flag(&flag, "CVSpilsSetLinearSolver", 1)) return 1;
+    // if (CheckFlag(&flag, "CVSpilsSetLinearSolver", 1, errfp_) == NAUNET_FAIL) {
+    //     return NAUNET_FAIL;
+    // }
     // flag = CVSpilsSetJacTimes(cv_mem_, NULL, Jtv);
-    // if (check_flag(&flag, "CVSpilsSetJacTimes", 1)) return 1;
+    // if (CheckFlag(&flag, "CVSpilsSetJacTimes", 1, errfp_) == NAUNET_FAIL) {
+    //     return NAUNET_FAIL;
+    // }
 
     /* {% endif %} */
 
@@ -240,30 +378,16 @@ int Naunet::Init(int nsystem, double atol, double rtol, int mxsteps) {
     return NAUNET_SUCCESS;
 };
 
-int Naunet::DebugInfo() {
+
+int Naunet::PrintDebugInfo() {
     long int nst, nfe, nsetups, nje, netf, nge, nni, ncfn;
     int flag;
 
     /* {% if info.method == "dense" or info.method == "sparse" -%} */
 
-    flag = CVodeGetNumSteps(cv_mem_, &nst);
-    check_flag(&flag, "CVodeGetNumSteps", 1);
-    flag = CVodeGetNumRhsEvals(cv_mem_, &nfe);
-    check_flag(&flag, "CVodeGetNumRhsEvals", 1);
-    flag = CVodeGetNumLinSolvSetups(cv_mem_, &nsetups);
-    check_flag(&flag, "CVodeGetNumLinSolvSetups", 1);
-    flag = CVodeGetNumErrTestFails(cv_mem_, &netf);
-    check_flag(&flag, "CVodeGetNumErrTestFails", 1);
-    flag = CVodeGetNumNonlinSolvIters(cv_mem_, &nni);
-    check_flag(&flag, "CVodeGetNumNonlinSolvIters", 1);
-    flag = CVodeGetNumNonlinSolvConvFails(cv_mem_, &ncfn);
-    check_flag(&flag, "CVodeGetNumNonlinSolvConvFails", 1);
-
-    flag = CVodeGetNumJacEvals(cv_mem_, &nje);
-    check_flag(&flag, "CVodeGetNumJacEvals", 1);
-
-    flag = CVodeGetNumGEvals(cv_mem_, &nge);
-    check_flag(&flag, "CVodeGetNumGEvals", 1);
+    if (GetCVStates(cv_mem_, nst, nfe, nsetups, nje, netf, nge, nni, ncfn) == NAUNET_FAIL) {
+        return NAUNET_FAIL;
+    }
 
     printf("\nFinal Statistics:\n");
     printf("nst = %-6ld nfe  = %-6ld nsetups = %-6ld nje = %ld\n", nst, nfe, nsetups, nje);
@@ -275,24 +399,9 @@ int Naunet::DebugInfo() {
 
     for (int i=0; i<n_stream_in_use_; i++) {
 
-        flag = CVodeGetNumSteps(cv_mem_[i], &nst);
-        check_flag(&flag, "CVodeGetNumSteps", 1);
-        flag = CVodeGetNumRhsEvals(cv_mem_[i], &nfe);
-        check_flag(&flag, "CVodeGetNumRhsEvals", 1);
-        flag = CVodeGetNumLinSolvSetups(cv_mem_[i], &nsetups);
-        check_flag(&flag, "CVodeGetNumLinSolvSetups", 1);
-        flag = CVodeGetNumErrTestFails(cv_mem_[i], &netf);
-        check_flag(&flag, "CVodeGetNumErrTestFails", 1);
-        flag = CVodeGetNumNonlinSolvIters(cv_mem_[i], &nni);
-        check_flag(&flag, "CVodeGetNumNonlinSolvIters", 1);
-        flag = CVodeGetNumNonlinSolvConvFails(cv_mem_[i], &ncfn);
-        check_flag(&flag, "CVodeGetNumNonlinSolvConvFails", 1);
-
-        flag = CVodeGetNumJacEvals(cv_mem_[i], &nje);
-        check_flag(&flag, "CVodeGetNumJacEvals", 1);
-
-        flag = CVodeGetNumGEvals(cv_mem_[i], &nge);
-        check_flag(&flag, "CVodeGetNumGEvals", 1);
+        if (GetCVStates(cv_mem_[i], nst, nfe, nsetups, nje, netf, nge, nni, ncfn) == NAUNET_FAIL) {
+            return NAUNET_FAIL;
+        }
 
         SUNLinSol_cuSolverSp_batchQR_GetDeviceSpace(cv_ls_[i], &cuSpInternalSize, &cuSpWorkSize);
 
@@ -305,38 +414,8 @@ int Naunet::DebugInfo() {
     /* {% endif %} */
 
     return NAUNET_SUCCESS;
-}
-
-int Naunet::Finalize() {
-
-    /* {% if info.method == "dense" or info.method == "sparse" -%} */
-
-    // N_VDestroy(cv_y_);
-    N_VFreeEmpty(cv_y_);
-    SUNMatDestroy(cv_a_);
-    CVodeFree(&cv_mem_);
-    SUNLinSolFree(cv_ls_);
-    // delete m_data;
-
-    /* {% elif info.method == "cusparse" -%} */
-    for (int i = 0; i < n_stream_in_use_; i++) {
-        N_VFreeEmpty(cv_y_[i]);
-        SUNMatDestroy(cv_a_[i]);
-        CVodeFree(&cv_mem_[i]);
-        SUNLinSolFree(cv_ls_[i]);
-
-        cusparseDestroy(cusp_handle_[i]);
-        cusolverSpDestroy(cusol_handle_[i]);
-        cudaStreamDestroy(custream_[i]);
-    }
-
-    cudaFreeHost(h_ab);
-    cudaFreeHost(h_data);
-
-    /* {% endif %} */
-
-    return NAUNET_SUCCESS;
 };
+
 
 /* {% if info.method == "cusparse" %} */
 // To reset the size of cusparse solver
@@ -381,7 +460,9 @@ int Naunet::Reset(int nsystem, double atol, double rtol, int mxsteps) {
 
         cv_y_[i] = N_VNew_Cuda(NEQUATIONS * n_system_per_stream);
         flag = N_VSetKernelExecPolicy_Cuda(cv_y_[i], stream_exec_policy_[i], reduce_exec_policy_[i]);
-        if (check_flag(&flag, "N_VSetKernelExecPolicy_Cuda", 0)) return 1;
+        if (CheckFlag(&flag, "N_VSetKernelExecPolicy_Cuda", 1, errfp_) == NAUNET_FAIL) {
+            return NAUNET_FAIL;
+        }
         cv_a_[i] = SUNMatrix_cuSparse_NewBlockCSR(n_system_per_stream, NEQUATIONS, NEQUATIONS, NNZ,
                                                   cusp_handle_[i]);
         cv_ls_[i] = SUNLinSol_cuSolverSp_batchQR(cv_y_[i], cv_a_[i], cusol_handle_[i]);
@@ -391,15 +472,29 @@ int Naunet::Reset(int nsystem, double atol, double rtol, int mxsteps) {
         cv_mem_[i] = CVodeCreate(CV_BDF);
 
         flag = CVodeInit(cv_mem_[i], Fex, 0.0, cv_y_[i]);
-        if (check_flag(&flag, "CVodeInit", 1)) return 1;
+        if (CheckFlag(&flag, "CVodeInit", 1, errfp_) == NAUNET_FAIL) {
+            return NAUNET_FAIL;
+        }
+
         flag = CVodeSetMaxNumSteps(cv_mem_[i], mxsteps_);
-        if (check_flag(&flag, "CVodeSetMaxNumSteps", 0)) return 1;
+        if (CheckFlag(&flag, "CVodeSetMaxNumSteps", 1, errfp_) == NAUNET_FAIL) {
+            return NAUNET_FAIL;
+        }
+
         flag = CVodeSStolerances(cv_mem_[i], rtol_, atol_);
-        if (check_flag(&flag, "CVodeSStolerances", 1)) return 1;
+        if (CheckFlag(&flag, "CVodeSStolerances", 1, errfp_) == NAUNET_FAIL) {
+            return NAUNET_FAIL;
+        }
+
         flag = CVodeSetLinearSolver(cv_mem_[i], cv_ls_[i], cv_a_[i]);
-        if (check_flag(&flag, "CVodeSetLinearSolver", 1)) return 1;
+        if (CheckFlag(&flag, "CVodeSetLinearSolver", 1, errfp_) == NAUNET_FAIL) {
+            return NAUNET_FAIL;
+        }
+
         flag = CVodeSetJacFn(cv_mem_[i], Jac);
-        if (check_flag(&flag, "CVodeSetJacFn", 1)) return 1;
+        if (CheckFlag(&flag, "CVodeSetJacFn", 1, errfp_) == NAUNET_FAIL) {
+            return NAUNET_FAIL;
+        }
 
         // reset the n_vector to empty, maybe not necessary
         // N_VDestroy(cv_y_);
@@ -424,9 +519,14 @@ int Naunet::Solve(realtype *ab, realtype dt, NaunetData *data) {
     N_VSetArrayPointer(ab, cv_y_);
 
     flag = CVodeReInit(cv_mem_, 0.0, cv_y_);
-    if (check_flag(&flag, "CVodeReInit", 1)) return 1;
+    if (CheckFlag(&flag, "CVodeReInit", 1, errfp_) == NAUNET_FAIL) {
+        return NAUNET_FAIL;
+    }
+
     flag = CVodeSetUserData(cv_mem_, data);
-    if (check_flag(&flag, "CVodeSetUserData", 1)) return 1;
+    if (CheckFlag(&flag, "CVodeSetUserData", 1, errfp_) == NAUNET_FAIL) {
+        return NAUNET_FAIL;
+    }
 
     realtype t0 = 0.0;
     flag = CVode(cv_mem_, dt, cv_y_, &t0, CV_NORMAL);
@@ -466,9 +566,14 @@ int Naunet::Solve(realtype *ab, realtype dt, NaunetData *data) {
 #endif
 
         flag = CVodeReInit(cv_mem_[i], 0.0, cv_y_[i]);
-        if (check_flag(&flag, "CVodeReInit", 1)) return 1;
+        if (CheckFlag(&flag, "CVodeReInit", 1, errfp_) == NAUNET_FAIL) {
+            return NAUNET_FAIL;
+        }
+
         flag = CVodeSetUserData(cv_mem_[i], h_data + i * n_system_ / n_stream_in_use_);
-        if (check_flag(&flag, "CVodeSetUserData", 1)) return 1;
+        if (CheckFlag(&flag, "CVodeSetUserData", 1, errfp_) == NAUNET_FAIL) {
+            return NAUNET_FAIL;
+        }
 
         flag = CVode(cv_mem_[i], dt, cv_y_[i], &t0, CV_NORMAL);
 
@@ -480,6 +585,8 @@ int Naunet::Solve(realtype *ab, realtype dt, NaunetData *data) {
         }
 
     }
+
+    // TODO: return cvode flag
 
     cudaDeviceSynchronize();
 
