Fix memory leak

--- a/naunet/templates/cvode/include/naunet.h.j2
+++ b/naunet/templates/cvode/include/naunet.h.j2
@@ -59,6 +59,9 @@ class Naunet {
     realtype *h_ab;
     NaunetData *h_data;
 
+    realtype *d_ab;
+    NaunetData *d_data;
+
     /* {% else %} */
 
     N_Vector cv_y_;
