--- a/naunet/templates/odeint/src/naunet_ode.cpp.j2
+++ b/naunet/templates/odeint/src/naunet_ode.cpp.j2
@@ -126,8 +126,19 @@ Fex::Fex(NaunetData *data) {
     *u_data = *data;
 };
 
+Fex& Fex::operator=(const Fex& rhs) {
+    if (this != &rhs) {
+        *u_data = *rhs.u_data;
+    }
+    return *this;
+}
+
+Fex::Fex(const Fex& rhs) {
+    u_data = new NaunetData(*(rhs.u_data));
+};
+
 Fex::~Fex(){
-    // delete u_data;
+    delete u_data;
 };
 
 void Fex::operator()(const vector_type &abund, vector_type &ydot, double t) {
@@ -186,8 +197,19 @@ Jac::Jac(NaunetData *data) {
     *u_data = *data;
 };
 
+Jac& Jac::operator=(const Jac& rhs) {
+    if (this != &rhs) {
+        *u_data = *rhs.u_data;
+    }
+    return *this;
+}
+
+Jac::Jac(const Jac& rhs) {
+    u_data = new NaunetData(*(rhs.u_data));
+};
+
 Jac::~Jac(){
-    // delete u_data;
+    delete u_data;
 };
 
 void Jac::operator()(const vector_type &abund, matrix_type &j, const double &t,
